Catálogo de sistemas
Catálogo de sistemas

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -370,7 +370,6 @@ Por fim, espera-se com esse planejamento oferecer para os usuários do Ministér
 
 
 # 18  ANEXOS
-
 << Informações adicionais poderão ser incluídas:
 Plano de trabalho do projeto de elaboração do PDTI, incluindo o cronograma;
 Relatório de Resultados do PDTI anterior;
@@ -382,3 +381,42 @@ Portfólio de TI;
 Lista de Necessidades não priorizadas para o período de validade do PDTI;
 Trechos do Planejamento Estratégico Institucional, Plano Plurianual (PPA) ou Orçamento do órgão referentes a TI;
 Outros documentos que completem ou auxiliem a compreensão do PDTI. >>
+
+
+## Documentos:
+
+## Planilhas:
+
+## Portfólio de Projetos
+
+## Catálogo de Sistemas
+
+### Sistemas dos Serviços Digitais Internos ao MinC
+
+| Sistema | Fase | Área | Descrição | licença |
+| ---------- | ------ | :------ | :------ | ------------: |
+| **Ocs Inventory** | Implantação | TI | Compõe a solução para inventário de Hardware e Software do parque computacional do MinC | GPL2 |
+| **OTRS** | Produção | TI | Painel para solicitação de serviços de TI - ITIL | AGPL3 |
+| **RHSis** | Produção | Gestão de Pessoas | Sistema de Gestão de Recursos Humanos | MinC |
+| **SEI** | Produção | Documentação e Informação | Gestão de Processo por meio Eletrônico  | Privado de Governo |
+| **Siminc** | Descontinuação | Planejamento e Orçamento | Gestão Orçamentária e Financeira  | GPL2 |
+| **SIMEC** | Implantação  | Gestão Orçamentária, Financeira e outras| Plataforma desenvolvida pelo MEC para gestão Orçamentária, Financeira, e outros  | GPL2 |
+| **Sipac** | Descontinuação | Almoxarifado | Solução legada para gestão de Patrimônio, Almoxarifado e outros  | Proprietário |
+| **Sistel** | Desenvolvimento | TI | Gestão de Faturas e Empréstimo de Equipamentos de Telecom  | GPL3 |
+
+
+### Sistemas dos Serviços Digitais Externos ao MinC
+
+| Sistema | Fase | Área | Descrição | licença |
+| ---------- | ------ | :------ | :------ | ------------: |
+|**[Sistema de Apoio às Leis de Incentivo à Cultura - SALIC](#a-lei-rouanet-e-o-incentivo-cultural)** |Produção |Fomento e Incentivo |O sistema fornece os mecanismos para gestão do incentivo fiscal à projetos culturais pelos mecanismos da Lei Rouanet, mediando as diversas etapas **(proposta, admissão, captação de recursos, execução e prestação de contas)** envolvendo os vários atores **(Proponente, Avaliadores, Incentivador e Fornecedores)** |AGPL3 |
+|**[Vale Cultura](http://vale.cultura.gov.br/)**|Produção |Fomento e Incentivo |Sistema para gestão do Programa Vale Cultura que beneficia trabalhadores através de recursos de incentivo fiscal dos empregadores |MinC |
+|**[Gestão de Ouvidoria Governamental - GOG](http://ouvidoria.cultura.gov.br/)** |Produção |Ouvidoria |Sistematiza o fluxo de recepção e tratamento das manifestações à ouvidoria entre as unidades do MinC |AGPL3 |
+|**[Mapa da Cultura](http://mapas.cultura.gov.br/) - [SNIIC](#sistema-nacional-de-informações-e-indicadores-culturais-sniic)**|Produção |Estatísticas e Indicadores Culturais |Plataforma para mapeamento coletivo de projetos, artistas, espaços, eventos culturais e seus produtores. |AGPL3 |
+|**SalicWeb**|Descontinuação |Fomento e Incentivo Cultural |Ferramenta para realização de Editais de Fomento |MinC |
+|**[Plataforma Rede Cultura Viva](http://culturaviva.gov.br/)**|Produção |Cidadania e Diversidade Cultural |Cadastro dos Pontos e Pontões de Cultura para atendimento à [Lei Cultura Viva](http://www.cultura.gov.br/cultura-viva1)|AGPL3 |
+|**[Cadastro Nacional de Bibliotecas](http://bibliotecas.cultura.gov.br/)**|Produção |Livro, Leitura, Literatura e Bibliotecas |Cadastro de bibliotecas públicas e comunitárias utilizando o Mapas Culturais |AGPL3 |
+|**Arches Lib**|Descontinuação |Livro, Leitura, Literatura e Bibliotecas |Gestão de acervo e circulação para bibliotecas |Proprietário |
+|**[Sistema Nacional de Cultura - SNC](http://cultura.gov.br/snc)**|Produção |Articulação e Desenvolvimento Institucional |Platforma de cadastro e articulação com os **Entes Federados** para gestão e promoção de políticas culturais  |AGPL3 |
+|**e-Praças - Gestão das [praças CEUS](http://ceus.cultura.gov.br/)**|Desenvolvimento |Infraestrutura Cultural |Plataforma na nuvem para uso dos administradores das praças CEUs, registro de atividades e articulação com o MinC |AGPL3 |
+|**[Plataforma de Gestão do Conselho Nacional de Política Cultural - CNPC](http://cnpc.cultura.gov.br/)**|Produção |Articulação e Desenvolvimento Institucional |Plataforma para Comunicação, Transparência e Participação do Conselho Nacional de Politica Cultural |MinC |
