--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -383,15 +383,13 @@ Trechos do Planejamento Estratégico Institucional, Plano Plurianual (PPA) ou Or
 Outros documentos que completem ou auxiliem a compreensão do PDTI. >>
 
 
-## Documentos:
+## 18.1 Documentos
 
-## Planilhas:
+## 18.2 Portfólio de Projetos
 
-## Portfólio de Projetos
+## 18.3 Catálogo de Sistemas
 
-## Catálogo de Sistemas
-
-### Sistemas dos Serviços Digitais Internos ao MinC
+#### Sistemas dos Serviços Digitais Internos ao MinC
 
 | Sistema | Fase | Área | Descrição | licença |
 | ---------- | ------ | :------ | :------ | ------------: |
@@ -404,8 +402,7 @@ Outros documentos que completem ou auxiliem a compreensão do PDTI. >>
 | **Sipac** | Descontinuação | Almoxarifado | Solução legada para gestão de Patrimônio, Almoxarifado e outros  | Proprietário |
 | **Sistel** | Desenvolvimento | TI | Gestão de Faturas e Empréstimo de Equipamentos de Telecom  | GPL3 |
 
-
-### Sistemas dos Serviços Digitais Externos ao MinC
+#### Sistemas dos Serviços Digitais Externos ao MinC
 
 | Sistema | Fase | Área | Descrição | licença |
 | ---------- | ------ | :------ | :------ | ------------: |
