Análise SWOT adicionada
Análise SWOT adicionada

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -266,7 +266,35 @@ Tornar-se um modelo de gestão corporativa de TI pública, baseada em colaboraç
 Os objetivos estratégicos são resultados que a CGTEC pretende alcançar, desdobrados a partir da Visão, como condutores do caminho a ser seguido para alcançá-la. Neste sentido, o planejamento estratégico de TI, traz esses novos direcionadores, para o momento de transição e alinhamento do órgão, sem deixar de se relacionar com o passado, mas com prioridade e atenção para o futuro.
 
 ## 8.5  Análise de SWOT
-<< Inserir a matriz de SWOT, apresentando o posicionamento estratégico da unidade de TI, com a identificação dos pontos fortes e fracos, das oportunidades e ameaças em relação aos ambientes interno e externo >>
+
+| Forças (S)                                                                                       | Fraquezas (W)                                                                                         | 
+|--------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------| 
+| Integração crescente com áreas finalísticas no processo de desenvolvimento de software e portais | Pouca divulgação e aplicação incipiente da Política de Segurança da Informação e Comunicação (POSIC)  | 
+| Metodologia de gestão de projetos instituída                                                     | Deficiência na comunicação dos serviços e resultados de TIC                                           | 
+| Plano de Dados abertos integrado do Sistema MinC                                                 | Inexistência de escritório de aquisições de TIC                                                       | 
+| Catálogo de Serviços orientado aos usuários                                                      | Ausência de um Plano de Continuidade de Negócios                                                      | 
+| Cargos de gestão ocupados por servidores carreira                                                | Reduzido quadro de servidores efetivos                                                                | 
+| Infraestrutura de TI atualizada                                                                  | Sistemas críticos de TI rodando nas áreas finalísticas sem o apoio da CGTEC e sem integração          | 
+| Utilização das últimas tecnologias de mercado                                                    | Alguns processos internos da CGTEC não são geridos e nem monitorados                                  | 
+| Apoio da SGE e da Alta Administração                                                             | Não existe processo de garantia e controle da qualidade dos produtos e processos                      | 
+| Inovação no desenvolvimento de software                                                          |                                                                                                       | 
+| Parcerias com Universidades                                                                      |                                                                                                       |
+
+
+| Oportunidades (O)                                                                                                        | Ameaças (T)                                                                                                                   | 
+|--------------------------------------------------------------------------------------------------------------------------|-------------------------------------------------------------------------------------------------------------------------------| 
+| Ampliar a utilização de software livre                                                                                   | Alta rotatividade dos dirigentes do negócio                                                                                   | 
+| Prover plataforma como serviço para entes da Administração Pública                                                       | Alta rotatividade e evasão do corpo gestor                                                                                    | 
+| Promover a integração do Sistema MinC por meio da Comitê de TI formalmente instituído                                    | Interferência da política externa que impacta nas decisões estratégicas e operacionais internas                               | 
+| Disponibilidade de diretrizes, normas, padrões e melhores práticas em Governança de TIC para órgãos públicos pela STI/MP | Percepção equivocada das atribuições da TI pelas áreas finalísticas                                                           | 
+| Cooperação com outros órgãos da administração pública no compartilhamento de boas práticas de TIC                        | Os processos de negócio do Ministério não são mapeados, geridos e nem monitorados                                             | 
+| Todas as áreas finalísticas dependem dos serviços de TI para o alcance dos objetivos estratégicos                        | Não existe escritório de projetos efetivo para garantir a gestão dos projetos de acordo com o plano estratégico do Ministério | 
+| Lacunas a serem trabalhadas com relação à impessoalidade na prestação de serviços                                        | Não é realizada uma efetiva gestão da informação                                                                              | 
+| Possibilidade de divulgação mais ampla dos serviços oferecidos pela TI                                                   | Baixa periodicidade de reuniões do Comitê de Governança Digital                                                               | 
+| Possibilidade de aprimorar canais de comunicação para envolvimento prévio da CGTEC nos projetos finalísticos             | Corte de orçamento                                                                                                            | 
+
+
+
 
 ## 8.6 Fatores Críticos de Sucesso
 
