Ajuste no indice
Ajuste no indice

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -7,22 +7,22 @@
 ## Equipe 
 
 Sérgio Sá Leitão
- **Ministro da Cultura**
+  **Ministro da Cultura**
 
 Mariana Ribas
- **Secretária-Executiva**
+  **Secretária-Executiva**
 
 Felipe Caldeira Marron da Rocha
- **Subsecretário de Planejamento, Orçamento e Administração**
+  **Subsecretário de Planejamento, Orçamento e Administração**
 
 Lucineide Alves de Oliveira Medeiros da Costa
- **Subsecretária de Gestão Estratégica**
+  **Subsecretária de Gestão Estratégica**
 
 Nitai Bezerra da Silva
-**Coordenador-Geral de Infraestrutura Tecnológica**
+  **Coordenador-Geral de Infraestrutura Tecnológica**
 
 Paulo Henrique de Carvalho Moreira
-**Coordenador de Governança**
+  **Coordenador de Governança**
 
 **Comitê de Governança Digital - CGD:**
 João Batista de Andrade
@@ -87,7 +87,7 @@ A execução deste Plano Diretor dar-se-á no período de 2018 a 2020, devendo s
 A realização da política cultural brasileira em toda sua amplitude necessita do alinhamento estratégico entre essas instituições vinculadas e o Ministério, para a execução do incentivo, do fomento, da promoção e da garantia de acesso à cultura brasileira, em suas mais variadas formas.
 
 
-## Estrutura Organizacional
+## 1.1 Estrutura Organizacional
 [//]: # (jjeske: ainda trabalhando nesta seção)
 Atual estrutura regimental do MinC é regida pelo Decreto nº 8.837, de 17 de agosto de 2016:
 
@@ -114,11 +114,11 @@ A(Preparação) --> B(Diagnóstico)
 B --> C(Planejamento)
 ```
 
-### Preparação
+### 3.1 Preparação
 
 Preparar para Criação/Revisão do PDTIC - Consolidação dos documentos de referência e identificar as estratégias da organização, princípios e diretrizes.
 
-### Diagnóstico
+### 3.2 Diagnóstico
 
 Avaliar resultados do PDTIC Anterior - A fim de direcionar o trabalho de revisão do PDTIC anterior foi utilizado o PETIC 2015-2017, que serviu de base para toda a revisão e construção deste PDTIC.
 
@@ -130,7 +130,7 @@ Análise SWOT da TI - durante a avaliação do PDTIC anterior foi realizada a an
 
 Identificar necessidades - Para um levantamento mais específico das áreas de negócio em relação as necessidades de TI, foram realizadas reuniões com as áreas de negócio de forma a identificar as necessidades de cada área. O histórico desse trabalho é apresentado no anexo II.
 
-### Planejamento
+### 3.3 Planejamento
 
 Com o diagnóstico finalizado e revisado, as necessidades de TI foram priorizadas com base em uma metodologia, agrupadas por similaridade e assim foram propostos projetos para o seu atendimento.
 
@@ -157,18 +157,18 @@ Para a elaboração deste Plano Diretor de Tecnologia da Informação e Comunica
 
 São diretrizes da unidade de TI:
 	
-### Diretriz Geral (DG):
+### 5.1 Diretriz Geral (DG):
 
 Manter-se alinhada com as áreas de negócio, em busca de auxiliar no alcance dos objetivos estratégicos do MinC.
 
-### Diretrizes Específicas:
+### 5.2 Diretrizes Específicas:
 - **D1** - Manter a transparência das suas ações e garantir a execução das deliberações do Comitê de Governança Digital.
 - **D2** - Fomentar a participação das áreas na gestão dos projetos de TI.
 - **D3** - Melhorar a experiência e a satisfação dos usuários de TI do MinC.
 - **D4** - Fortalecer as iniciativas baseadas em software livre e dados abertos.
 - **D5** - Atuar em parceria com as áreas de negócio em busca de soluções conjuntas.
 
-### São princípios norteadores da unidade de TI:
+### 5.2 Princípios Norteadores:
 - **P1** - Colaboração, agilidade e transparência.
 - **P2** - Garantir a relação e a interação entre indivíduos.
 - **P3** - Entregar soluções funcionais e criativas.
