Adicionando lista TODO para CSS
Adicionando lista TODO para CSS

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -24,31 +24,31 @@ Nitai Bezerra da Silva
 Paulo Henrique de Carvalho Moreira  
 **Coordenador de Governança**
 
-**Comitê de Governança Digital - CGD:**
-João Batista de Andrade
-Lucineide Alves de Oliveira Medeiros da Costa
-Felipe Caldeira Marron da Rocha
-Nitai Bezerra da Silva
-Mansur Bassit (SEC) Titular
-Thalles Rodrigues de Siqueira (SEC) Suplente
-Adão Cândido (SADI) Titular
-Magali de Guedes Mora (SADI) Suplente
-Mariana Ribas (SAV) Titular
-João Batista da Silva (SAV) Suplente
-Débora Albuquerque (SCDC) Titular
-Cristiano Vasconcelos (SCDC) Suplente
-José Paulo Soares Martins (SEFIC) Titular
-Jorge Oliveira Linhares Arruda (SEFIC) Suplente
-Raimundo Benoni Franco (SEINFRA) Titular
-Jusimara Ribas (SEINFRA) Suplente
+**Comitê de Governança Digital - CGD:**  
+João Batista de Andrade  
+Lucineide Alves de Oliveira Medeiros da Costa  
+Felipe Caldeira Marron da Rocha  
+Nitai Bezerra da Silva  
+Mansur Bassit (SEC) Titular  
+Thalles Rodrigues de Siqueira (SEC) Suplente  
+Adão Cândido (SADI) Titular  
+Magali de Guedes Mora (SADI) Suplente  
+Mariana Ribas (SAV) Titular  
+João Batista da Silva (SAV) Suplente  
+Débora Albuquerque (SCDC) Titular  
+Cristiano Vasconcelos (SCDC) Suplente  
+José Paulo Soares Martins (SEFIC) Titular  
+Jorge Oliveira Linhares Arruda (SEFIC) Suplente  
+Raimundo Benoni Franco (SEINFRA) Titular  
+Jusimara Ribas (SEINFRA) Suplente  
 
-**Equipe de revisão do PDTIC:**
-Camila Amorim
-Claudilea de Queiroz Sousa
-Marcus Vinícius Pereira de Menezes
-Jonas Jeske
-Sebastião Lima Filho
-Wuarli Ceza Santos
+**Equipe de revisão do PDTIC:**  
+Claudilea de Queiroz Sousa  
+Christian    
+Marcus Vinícius Pereira de Menezes  
+Jonas Jeske  
+Sebastião Lima Filho  
+Wuarli Ceza Santos  
 
 
 ## Apresentação
