--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -44,7 +44,7 @@ Jusimara Ribas (SEINFRA) Suplente
 
 **Equipe de revisão do PDTIC:**  
 Claudilea de Queiroz Sousa  
-Christian    
+Christian Moryah Contiero Miranda    
 Marcus Vinícius Pereira de Menezes  
 Jonas Jeske  
 Sebastião Lima Filho  
