--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -25,23 +25,13 @@ Paulo Henrique de Carvalho Moreira
 **Coordenador de Governança**
 
 **Comitê de Governança Digital - CGD:**  
-João Batista de Andrade  
-Lucineide Alves de Oliveira Medeiros da Costa  
-Felipe Caldeira Marron da Rocha  
-Nitai Bezerra da Silva  
-Mansur Bassit (SEC) Titular  
-Thalles Rodrigues de Siqueira (SEC) Suplente  
-Adão Cândido (SADI) Titular  
-Magali de Guedes Mora (SADI) Suplente  
-Mariana Ribas (SAV) Titular  
-João Batista da Silva (SAV) Suplente  
-Débora Albuquerque (SCDC) Titular  
-Cristiano Vasconcelos (SCDC) Suplente  
-José Paulo Soares Martins (SEFIC) Titular  
-Jorge Oliveira Linhares Arruda (SEFIC) Suplente  
-Raimundo Benoni Franco (SEINFRA) Titular  
-Jusimara Ribas (SEINFRA) Suplente  
-
+Mansur Bassit (SEC)  
+Adão Cândido (SADI)  
+Mariana Ribas (SAV)  
+Débora Albuquerque (SCDC)  
+José Paulo Soares Martins (SEFIC)  
+Raimundo Benoni Franco (SEINFRA)  
+ 
 **Equipe de revisão do PDTIC:**  
 Claudilea de Queiroz Sousa  
 Christian Moryah Contiero Miranda    
