--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -81,7 +81,7 @@ A realização da política cultural brasileira em toda sua amplitude necessita 
 [//]: # (jjeske: ainda trabalhando nesta seção)
 Atual estrutura regimental do MinC é regida pelo Decreto nº 8.837, de 17 de agosto de 2016:
 
-![Figura 1 - Estrutura Organizacional do MinC](https://github.com/culturagovbr/pdtic-minc/tree/master/PDTIC-2018-2020/img/orgminc.jpg)
+![orgminc](https://github.com/culturagovbr/pdtic-minc/tree/master/PDTIC-2018-2020/img/orgminc.jpg "Estrutura Organizacional do MinC.")
 
 O Ministério conta com suas 6 secretarias finalísticas e duas subsecretarias ligadas diretamente à Secretaria Executiva, cada uma com sua função específica. Para dar capilaridade às suas ações, o Ministério também conta com 8 regionais, que atuam de forma descentralizada nas localidades, em busca de facilitar o atendimento do seu público-alvo. Além da sua estrutura própria, o sistema MinC conta ainda com a participação de 7 instituições vinculadas e 4 órgãos colegiados formados com a participação da sociedade.
 
@@ -217,19 +217,32 @@ Das 14 metas acima analisadas obteve-se o seguinte resultado:
 - 2 Parcialmente Atendidas
 - 4 Não atendidas
 
-## 7.2 Análise das Necessidades PDTIC 2015-2017
+## 7.1 Análise dos Projetos do PDTIC 2015-2017
 
-FAZER-- O PDTIC anterior contou com XXX necessidades, das quais XXX foram totalmente atendidas, XXX foram parcialmente atendidas e XXX não foram atendidas. No período 2015-2017, executou-se XXX% de suas ações previstas.
 
-## 7.2 Análise dos Projetos do PDTIC 2015-2017
+### 7.1.1 Metodologia de Gestão de Projetos de TI - MGP-TI
 
-FAZER-- O PDTIC anterior contou com XXX projetos, das quais XXX foram totalmente concluídos, XXX foram parcialmente concluídos e XXX não foram concluídos. No período 2015-2017, executou-se XXX% dos projetos previstos.
+Para executar a gestão dos projetos de TI é utilizada a Metodologia de Gestão de Projetos de TI – MGP-TI, baseada nos conceitos do Projects IN Controlled Environments - PRINCE2, que permite a gestão compartilhada das decisões dos projetos com os seus interessados, além de oferecer um controle detalhado do escopo, prazo, custos, qualidade e riscos dos projetos de TI.
 
-## 7.3 Relatório de Resultados
+![mgpti](https://github.com/culturagovbr/pdtic-minc/tree/master/PDTIC-2018-2020/img/mgpti.png "Ciclo de vida de um projeto, de acordo com a MGP-TI.")
 
-Além de apontar a evolução da TIC em relação às ações previstas no PDTI 2015-2017, foram analisadas as razões pelas quais as ações não puderam ser executadas. As justificativas se dividem em falta de recursos humanos e mudança de prioridade. Quanto ao fatores mudança de prioridade, cabe destacar que durante a vigência de 3 anos ocorreram alterações estruturais no Ministério e troca de representantes na alta administração do Ministério. Como resultado dessas mudanças é natural que algumas necessidades percam a prioridade chegando a serem desnecessárias.
+Esta definição foi formalizada com a Portaria No 687, de 20 de Outubro de 2015, publicada no Boletim Administrativo, Edição Extra, de 20 de outubro de 2015. Tal portaria dispõe sobre a Metodologia de Gerenciamento de Projetos de Tecnologia da Informação – MGP-TI, no Ministério da Cultura.
 
-Analisando os dados referentes às justificativas da não realização das ações, infere-se que se houvesse um maior número de recursos humanos teríamos uma maior execução das ações previstas. Outro ponto relevante seria uma maior disponibilidade de tempo do Comitê de Governança de Digital para se reunir com a finalidade de aprovar as alterações de priorização. 
+
+### 7.1.2 Projetos 2015-2017
+
+Importante frisar que as ações tomadas para antender as necessidades levantadas no PDTIC anterior foram projetizadas. Com isso, o portfólio de projetos no período 2015-2017 totalizou 163 projetos de TI. A tabela analisada para compor os resultados pode ser vista em XXXX. O resultado dessa análise é apresentado a seguir:
+
+
+#### 
+
+
+
+## 7.2 Relatório de Resultados
+
+Além de apontar a evolução da TIC em relação às ações previstas no PDTI 2015-2017, foram analisadas as razões pelas quais os projetos não puderam ser concluídos, tiveram sua execução suspensa ou foram cancelados. As justificativas se dividem em falta de recursos humanos e mudança de prioridade. Quanto ao fatores mudança de prioridade, cabe destacar que durante a vigência de 3 anos ocorreram alterações estruturais no Ministério e troca de representantes na alta administração do Ministério. Como resultado dessas mudanças é natural que algumas necessidades percam a prioridade chegando a serem desnecessárias.
+
+Analisando os dados referentes às justificativas da não realização dos projetos, infere-se que se houvesse um maior número de recursos humanos teríamos uma maior execução dos projetos previstos. Outro ponto relevante seria uma maior disponibilidade de tempo do Comitê de Governança de Digital para se reunir com a finalidade de aprovar as alterações de priorização. 
 
 # 8  REFERENCIAL ESTRATÉGICO DE TI
 
