Tabelas de projetos
Tabelas de projetos

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -224,7 +224,7 @@ Das 14 metas acima analisadas obteve-se o seguinte resultado:
 
 Para executar a gestão dos projetos de TI é utilizada a Metodologia de Gestão de Projetos de TI – MGP-TI, baseada nos conceitos do Projects IN Controlled Environments - PRINCE2, que permite a gestão compartilhada das decisões dos projetos com os seus interessados, além de oferecer um controle detalhado do escopo, prazo, custos, qualidade e riscos dos projetos de TI.
 
-![mgpti](https://github.com/culturagovbr/pdtic-minc/PDTIC-2018-2020/img/mgpti.png "Ciclo de vida de um projeto, de acordo com a MGP-TI.")
+![mgpti](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/mgpti.png "Ciclo de vida de um projeto, de acordo com a MGP-TI.")
 
 Esta definição foi formalizada com a Portaria No 687, de 20 de Outubro de 2015, publicada no Boletim Administrativo, Edição Extra, de 20 de outubro de 2015. Tal portaria dispõe sobre a Metodologia de Gerenciamento de Projetos de Tecnologia da Informação – MGP-TI, no Ministério da Cultura.
 
@@ -234,8 +234,28 @@ Esta definição foi formalizada com a Portaria No 687, de 20 de Outubro de 2015
 Importante frisar que as ações tomadas para antender as necessidades levantadas no PDTIC anterior foram projetizadas. Com isso, o portfólio de projetos no período 2015-2017 totalizou 163 projetos de TI. A tabela analisada para compor os resultados pode ser vista em XXXX. O resultado dessa análise é apresentado a seguir:
 
 
-#### 
+#### Resultados por Situação
 
+| Situação        | Qtd | %           | 
+|-----------------|-----|-------------| 
+| 0. Não Iniciado | 24  | 0,147239264 | 
+| 1. Pré-projeto  | 5   | 0,030674847 | 
+| 2.              | 0   | 0           | 
+| 3. Em execução  | 21  | 0,128834356 | 
+| 4. Concluído    | 72  | 0,441717791 | 
+| 5. Suspenso     | 20  | 0,122699387 | 
+| 6. Cancelado    | 21  | 0,128834356 | 
+
+#### Resultados por Tipo
+ 
+| Tipo            | Qtd | %           | 
+|-----------------|-----|-------------| 
+| Infra           | 29  | 0,17791411  | 
+| Desenvolvimento | 74  | 0,45398773  | 
+| Governança      | 22  | 0,134969325 | 
+| Aquisição       | 38  | 0,233128834 | 
+
+#### Resultados por Tipo
 
 
 ## 7.2 Relatório de Resultados
