Análise de resultados
Análise de resultados

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -219,6 +219,7 @@ Das 14 metas acima analisadas obteve-se o seguinte resultado:
 
 ## 7.1 Análise dos Projetos do PDTIC 2015-2017
 
+Importante frisar que as ações tomadas para antender as necessidades levantadas no PDTIC anterior foram projetizadas.
 
 ### 7.1.1 Metodologia de Gestão de Projetos de TI - MGP-TI
 
@@ -228,35 +229,80 @@ Para executar a gestão dos projetos de TI é utilizada a Metodologia de Gestão
 
 Esta definição foi formalizada com a Portaria No 687, de 20 de Outubro de 2015, publicada no Boletim Administrativo, Edição Extra, de 20 de outubro de 2015. Tal portaria dispõe sobre a Metodologia de Gerenciamento de Projetos de Tecnologia da Informação – MGP-TI, no Ministério da Cultura.
 
-
 ### 7.1.2 Projetos 2015-2017
 
-Importante frisar que as ações tomadas para antender as necessidades levantadas no PDTIC anterior foram projetizadas. Com isso, o portfólio de projetos no período 2015-2017 totalizou 163 projetos de TI. A tabela analisada para compor os resultados pode ser vista em XXXX. O resultado dessa análise é apresentado a seguir:
+o portfólio de projetos no período 2015-2017 totalizou **163 projetos de TI**. A tabela analisada para compor os resultados pode ser vista em [Projetos de TIC 2015 a 2017](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/referencias/projetos_2015_2017.xlsx). O resultado dessa análise é apresentado a seguir:
+
+#### Resultados da Situação geral dos Projetos
+
+| Situação        | Qtd | %   | 
+|-----------------|-----|-----| 
+| 0. Não Iniciado | 24  | 15% | 
+| 1. Pré-projeto  | 5   | 3%  | 
+| 2.              | 0   | 0%  | 
+| 3. Em execução  | 21  | 13% | 
+| 4. Concluído    | 72  | 44% | 
+| 5. Suspenso     | 20  | 12% | 
+| 6. Cancelado    | 21  | 13% | 
 
 
-#### Resultados por Situação
-
-| Situação        | Qtd | %           | 
-|-----------------|-----|-------------| 
-| 0. Não Iniciado | 24  | 0,147239264 | 
-| 1. Pré-projeto  | 5   | 0,030674847 | 
-| 2.              | 0   | 0           | 
-| 3. Em execução  | 21  | 0,128834356 | 
-| 4. Concluído    | 72  | 0,441717791 | 
-| 5. Suspenso     | 20  | 0,122699387 | 
-| 6. Cancelado    | 21  | 0,128834356 | 
-
-#### Resultados por Tipo
+#### Quantitativo de Projetos por Tipo
  
-| Tipo            | Qtd | %           | 
-|-----------------|-----|-------------| 
-| Infra           | 29  | 0,17791411  | 
-| Desenvolvimento | 74  | 0,45398773  | 
-| Governança      | 22  | 0,134969325 | 
-| Aquisição       | 38  | 0,233128834 | 
+| Tipo            | Qtd | %   | 
+|-----------------|-----|-----| 
+| Infra           | 29  | 18% | 
+| Desenvolvimento | 74  | 45% | 
+| Governança      | 22  | 13% | 
+| Aquisição       | 38  | 23% | 
 
-#### Resultados por Tipo
 
+#### Resultados dos Projetos de Infraestrutura
+
+| Situação dos Projetos de Infra | Qtd | %   | 
+|--------------------------------|-----|-----| 
+| 0. Não Iniciado                | 5   | 17% | 
+| 1. Pré-projeto                 | 1   | 3%  | 
+| 2.                             | 0   | 0%  | 
+| 3. Em execução                 | 4   | 14% | 
+| 4. Concluído                   | 13  | 45% | 
+| 5. Suspenso                    | 4   | 14% | 
+| 6. Cancelado                   | 2   | 7%  | 
+
+#### Resultados dos Projetos de Desenvolvimentos de Sistemas
+
+| Situação dos Projetos de Desenvolvimento | Qtd | %   | 
+|------------------------------------------|-----|-----| 
+| 0. Não Iniciado                          | 10  | 14% | 
+| 1. Pré-projeto                           | 0   | 0%  | 
+| 2.                                       | 0   | 0%  | 
+| 3. Em execução                           | 12  | 16% | 
+| 4. Concluído                             | 38  | 51% | 
+| 5. Suspenso                              | 11  | 15% | 
+| 6. Cancelado                             | 3   | 4%  | 
+
+#### Resultados dos Projetos de Governança de TI
+
+| Situação dos Projetos de Governança | Qtd | %   | 
+|-------------------------------------|-----|-----| 
+| 0. Não Iniciado                     | 3   | 14% | 
+| 1. Pré-projeto                      | 0   | 0%  | 
+| 2.                                  | 0   | 0%  | 
+| 3. Em execução                      | 3   | 14% | 
+| 4. Concluído                        | 11  | 50% | 
+| 5. Suspenso                         | 2   | 9%  | 
+| 6. Cancelado                        | 3   | 14% | 
+
+#### Resultados dos Projetos de Aquisições em TIC
+
+| Situação dos Projetos de Aquisição | Qtd | %   | 
+|------------------------------------|-----|-----| 
+| 0. Não Iniciado                    | 6   | 16% | 
+| 1. Pré-projeto                     | 4   | 11% | 
+| 2.                                 | 0   | 0%  | 
+| 3. Em execução                     | 2   | 5%  | 
+| 4. Concluído                       | 10  | 26% | 
+| 5. Suspenso                        | 3   | 8%  | 
+| 6. Cancelado                       | 13  | 34% | 
 
 ## 7.2 Relatório de Resultados
 
