Inserindo imgs de estrutura
Inserindo imgs de estrutura

--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -174,17 +174,17 @@ A CGTEC propõe diretrizes e implementa políticas de Tecnologia da Informação
 
 A atual posição da CGTEC na estrutura do MinC está apresentada abaixo:
 
-Figura 2 – Posição da CGTEC no MINC
+![cgtecnominc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtecnominc.png "Posição da CGTEC no MINC.")
 
 Após a reestruturação do MinC, promovida pelo Decreto nº 8.837, de 17 de agosto de 2016, a estrutura da CGTEC fica sofreu reduções em seu quadro de servidores, resultando na Figura 3:
 
-Figura 3 - Estrutura Atual da CGTEC
+![cgtecatual](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtecatual.png "Estrutura Atual da CGTEC.")
 
 Ressalta-se que a estrutura atual da CGTEC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 5, ou seja, uma redução na ordem de 58%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TI executados concorrentemente, como pode ser constatado no histórico deste plano.
 
 ##6.2. Proposta de estrutura organizacional
 
-FAZER
+![proposta](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/proposta.jpg "Proposta de Estrutura ideal da CGTEC")
 
 
 # 7  RESULTADOS DO PDTIC ANTERIOR 
