--- a/PDTIC-2018-2020/PDTIC_2018_2020.md
+++ b/PDTIC-2018-2020/PDTIC_2018_2020.md
@@ -176,16 +176,27 @@ A atual posição da CGTEC na estrutura do MinC está apresentada abaixo:
 
 ![cgtecnominc](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtecnominc.png "Posição da CGTEC no MINC.")
 
-Após a reestruturação do MinC, promovida pelo Decreto nº 8.837, de 17 de agosto de 2016, a estrutura da CGTEC fica sofreu reduções em seu quadro de servidores, resultando na Figura 3:
+Após a reestruturação do MinC, promovida pelo Decreto nº 8.837, de 17 de agosto de 2016, a estrutura da CGTEC fica sofreu reduções em seu quadro de servidores, conforme pode ser visto abaixo.
 
 ![cgtecatual](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/cgtecatual.png "Estrutura Atual da CGTEC.")
 
 Ressalta-se que a estrutura atual da CGTEC sofreu redução em seu quadro de pessoal, as quais foram trazidas pelo Decreto nº 8.837, de 17 de agosto de 2016. A redução no número de cargos de Direção e Assessoramento Superior foi de 12 para 5, ou seja, uma redução na ordem de 58%. Além disto, esta redução distanciou-se da nova proposta organizacional, a qual é apresentada abaixo. Tal proposta foi elaborada visando a eficiência no cumprimento dos objetivos estratégicos do órgão. Frisa-se que, apesar da redução estrutural, houve um aumento no número de demandas e projetos de TI executados concorrentemente, como pode ser constatado no histórico deste plano.
 
-##6.2. Proposta de estrutura organizacional
+## 6.1 Proposta de estrutura organizacional
+
+Percebe-se que a estrutura da CGTI conta com uma divisão funcional estruturada de acordo com as necessidades básicas da TI do órgão. Porém, se faz necessário realizar ajustes para que as estruturas possam funcionar de forma mais eficiente, e com capacidade de inovação, como demonstra a figura abaixo.
 
 ![proposta](https://github.com/culturagovbr/pdtic-minc/blob/master/PDTIC-2018-2020/img/proposta.jpg "Proposta de Estrutura ideal da CGTEC")
 
+A definição de uma Divisão de Mobilidade e Usabilidade se faz necessária na Coordenação de Desenvolvimento de Sistemas para que a mesma possa garantir a satisfação dos usuários nas suas entregas, baseando-se não apenas na entrega das funcionalidades, mas sim na entrega de uma solução simples e intuitivas, com foco no maior fenômeno da última década, a expansão da utilização de tecnologias móveis.
+
+A especialização da Coordenação de Infraestrutura tem por objetivo garantir a disponibilidade e a qualidade dos serviços prestados. Hoje esta coordenação não conta com uma divisão de produção, parte essencial de sua missão, o que na prática acaba colocando as atribuições desta natureza na responsabilidade do coordenador, gerando sobrecarga e baixa qualidade nessas tarefas. A transformação da divisão de telefonia, em uma divisão de comunicação e rede trás em si o alinhamento com um novo conceito de convergência entre as tecnologias da informação e da comunicação, de forma a facilitar a gestão integrada do link de internet, smartphones, das linhas de telefone VOIP e da telefonia fixa e comutada. Os serviços de treinamento e de segurança da informação tem por objetivo não apenas a especialização de responsabilidades tão críticas, mas principalmente a garantia da execução controlada da qualificação dos usuários do Ministério, de forma contínua e estratégica.
+
+A Coordenação de Governança precisa ampliar suas competências. Se faz urgente a criação de um escritório de aquisições, que seja capaz de monitorar os contratos em andamento, e também seja capaz de planejar de forma qualificada novas aquisições e aditivos contratuais. A falta dessa unidade trás essa responsabilidade para o Coordenador-Geral, o que gera um perigoso risco por não ter na unidade ninguém especializado no tema, tão sensível para o funcionamento da mesma. A criação do escritório de processos por sua vez faz parte da implantação de um ciclo contínuo de amadurecimento dos processos de TI, desta forma, a qualidade e a segurança dos processos internos se tornará cada vez maior, de forma monitorada e planejada para atender as necessidades do órgão.
+
+Por entender que os desafios da TI do MinC não são apenas de ordem natural, mas por vezes transcendem os modelos corporativos conhecidos, sugerimos aqui a criação de uma Coordenação de Inovação, capaz de gerar novos conhecimentos, práticas, métodos e tecnologias livres, capazes de agregar valor às entregas realizadas pela unidade, olhando sempre para a possibilidade de surpreender seus usuários e romper com as limitações burocráticas do modelo de gestão coorporativa da TI.
+
+Por fim, sugere-se a inclusão da competência de comunicação na unidade, transformando-a em “Coordenação-Geral de Tecnologias da Informação e Comunicação”, acrescentando de forma clara a responsabilidade que já existe na unidade, de fazer a gestão e disponibilizar os serviços de infraestrutura de comunicação via internet, telefonia fixa, móvel e comutada, para todos os usuários do Ministério.
 
 # 7  RESULTADOS DO PDTIC ANTERIOR 
 [//]: # (jjeske: ainda trabalhando nesta seção)
@@ -362,9 +373,6 @@ Os objetivos estratégicos são resultados que a CGTEC pretende alcançar, desdo
 | Possibilidade de divulgação mais ampla dos serviços oferecidos pela TI                                                   | Baixa periodicidade de reuniões do Comitê de Governança Digital                                                               | 
 | Possibilidade de aprimorar canais de comunicação para envolvimento prévio da CGTEC nos projetos finalísticos             | Corte de orçamento                                                                                                            | 
 
-
-
-
 ## 8.6 Fatores Críticos de Sucesso
 
 Os fatores levantados como críticos para a efetiva implantação e consequente obtenção dos resultados previstos pela TI são:
@@ -455,6 +463,8 @@ Considerando que a alta direção é composta pelas pessoas que possuem o mandat
 
 # 16  PROCESSO DE REVISÃO DO PDTI 
 << Informar a periodicidade das revisões que ocorrerão durante a validade do PDTI, bem como os responsáveis pelas revisões e os motivos que podem provocar atualizações no documento >>
+
+trimestral ?
 
 # 17  CONCLUSÃO
 O Plano Diretor de Tecnologia da Informação e Comunicação - PDTIC formaliza e comunica à organização os Planos, Metas e Ações em Tecnologia da informação que serão realizados no período de vigência deste instrumento de planejamento, após a realização de diagnóstico que exibe a situação atual e sinaliza a tendência para os investimentos. Além disso, demonstra de modo claro e transparente como os recursos e serviços de TI serão alocados para atender aos objetivos estratégicos do órgão.
